tests/paczka1/small_fuzzy/48243707.err
Error in line 2: Rp4c52sn A535 27,1
Error in line 4: jV6CLtdjmb S210 84,0
Error in line 9: BHgiatMP A535 42,57
